Actualización hecha por medio de PyCharm

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,9 @@
     <body>
         <div>
             <a href="/">Inicio</a>
+            <a href="/register">Register</a>
             <a href="/login">Login</a>
+            <a href="/logout">Logout</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
