--- a/app/templates/notlogged.html
+++ b/app/templates/notlogged.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hola, {{ user.personal_id }}!</h1>
+    <h1>¡No estas logueado!</h1>
 {% endblock %}
