--- a/app/templates/logout.html
+++ b/app/templates/logout.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hola, {{ user.personal_id }}!</h1>
+    <h1>¡Has cerrado sesión!</h1>
 {% endblock %}
