--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,10 @@
             {% else %}
             <a href="/login">Iniciar Sesión</a>
             {% endif %}
+            {% if current_user.is_authenticated %}
+            <a href="/changepassword">Cambiar Contraseña</a>
+            {% else %}
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
