--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hola, {{ user.personal_id }}!</h1>
+    <h1>Bienvenido a Hospital Heippi</h1>
 {% endblock %}
