--- a/app/templates/activateuser.html
+++ b/app/templates/activateuser.html
@@ -1,4 +1,6 @@
 <p>¡Bienvenido a Hospital Heippi! Muchas gracias por registrarte, por favor haz clic en el siguiente link para activar tu cuenta.</p>
 <p><a href="{{ confirm_url }}">{{ confirm_url }}</a></p>
 <br>
+<p>No responder a este mensaje</p>
+<br>
 <p>¡Gracias!</p>
