Modificación general del proyecto

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Bienvenido a Hospital Heippi</h1>
+    <h1>Bienvenido a Hospital Heippi, {{ current_user.name }}</h1>
+    <br>
+
 {% endblock %}
