--- a/app/templates/resetpassword.html
+++ b/app/templates/resetpassword.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Iniciar Sesión</h1>
+    <h1>Recuperar Contraseña</h1>
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
@@ -11,15 +11,6 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=30) }}<br>
-            {% for error in form.password.errors %}
-            <span style="color: red;">[{{ error }}]</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
-        <p><a href={{ url_for('resetpassword') }}>¿Olvidó su contraseña?</a></p>
     </form>
 {% endblock %}
